--- a/src/components/AnniversaryCalendar.css
+++ b/src/components/AnniversaryCalendar.css
@@ -1,3 +1,13 @@
+.calendarContainer{
+    margin-top: 150px;
+    margin-bottom: 100px;
+}
+
+.calendarContainer span{
+    display: block;
+    margin-bottom: 10px;
+}
+
 .disable_click{
     pointer-events: none;
     cursor: default;
@@ -6,7 +16,7 @@
 .react-calendar{
     margin-right: auto;
     margin-left: auto;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     border-color: transparent;
 }
 
@@ -27,3 +37,17 @@
     display: none;
 }
 
+.react-calendar__tile--active{
+    background-color: rgb(248, 135, 182);
+    border-radius: 50%;
+}
+
+.react-calendar__tile--active{
+    background-color: rgb(248, 135, 182);
+    border-radius: 50%;
+}
+
+.react-calendar__tile--active abbr{
+    font-weight: bold;
+    font-size: 110%;
+}
