--- a/src/components/AnniversaryCalendar.css
+++ b/src/components/AnniversaryCalendar.css
@@ -1,3 +1,12 @@
+.anniversary_calendar{
+    margin-top: 150px;
+}
+
+.anniversary_content{
+    font-size: 24px;
+    font-weight: bold;
+}
+
 .calendarContainer{
     margin-top: 150px;
     margin-bottom: 100px;
