--- a/src/components/ImageItem.css
+++ b/src/components/ImageItem.css
@@ -1,6 +1,7 @@
 .image_item{
     height: auto;
-    width: 100%;
+    width: 99%;
     margin-top: 20px;
     margin-bottom: 20px;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
 }
